# tkLayout

./: .clang-format  .git-blame-ignore-revs  .gitattributes  .gitignore  CMakeLists.txt  CMakeUninstall.cmake  GetGit.cmake  GetGitVersion.cmake  Makefile  README  README.md  ROOT-env.sh  TrackerGeom.cpp  TrackerGeom2.cpp  clang-format-all  configFileCreate.cpp  countWarningsErrors.sh  formatAll.sh  getRevisionDefine  install.sh  materialShow.cpp  play.sh  rootwebTest.cpp  setup.cpp  setup.sh  setupCMake_centos7.sh  setupCMake_slc6.sh  setup_centos7.sh  setup_centos8.sh  setup_el9.sh  setup_slc6.sh  setup_ubuntu21.04.sh  testConfig.cpp  testObjects.cpp  tklayout.cpp  tkmaterial.cpp  tracker_xml_fix.awk
config/: 1MeVneq_CMS_HGC_pp_7TeV_v3.7.2.0_FLUKA.map  1MeVneq_CMS_HGC_pp_7TeV_v3.7.2.0_FLUKA_pixel.map  1MeVneq_CMS_Phase2_HGCalMod_pp_7TeV_FLUKA_v3.7.19.1.map  1MeVneq_CMS_Phase2_HGCalMod_pp_7TeV_FLUKA_v3.7.20.0.map  1MeVneq_CMS_Phase2_HGCalMod_pp_7TeV_FLUKA_v3.7.20.0_pixel.map  1MeVneq_CMSphase2_pp_7TeV_v3.7.0.0_FLUKA.map  1MeVneq_CMSphase2_pp_7TeV_v3.7.0.0_FLUKA_pixel.map  Dose_720_test.map  Dose_CMS_HGC_pp_7TeV_v3.7.2.0.map  Dose_CMS_HGC_pp_7TeV_v3.7.2.0_FLUKA.map  Dose_CMS_HGC_pp_7TeV_v3.7.2.0_FLUKA_pixel.map  Dose_CMS_Phase2_pp_7TeV_FLUKA_v6_6_0_0.map  Dose_CMS_Phase2_pp_7TeV_FLUKA_v6_6_0_0_pixel.map  Dose_CMS_pp_Phase2_7TeVperbeam_FLUKA_v3.7.23.0.map  Dose_CMS_pp_Phase2_7TeVperbeam_FLUKA_v3.7.23.0_pixel.map  Dose_CMSphase2_pp_7TeV_v3.7.0.0_FLUKA.map  Dose_CMSphase2_pp_7TeV_v3.7.0.0_FLUKA_pixel.map  Materials.cfg  PixelMaterials.cfg  chemical_compounds.list  chemical_elements.list  chemical_mixtures.list  det_id_schemes.list  fluencePer1ppCol.map  irradiation.map  irradiationPixel.map  materials_references.list  materials_references.md  mattab.list  pt_eta_average_hits_3million.hst
doc/: Doxyfile  approccio.txt  layoutdidemo  materialTab.tex  references.md  sample.cfg  sampleTypes.cfg  scattering.tex  tkdoc.doxy
doc/algorithms/: .gitignore  scattering.tex  userManual.tex
doc/pdf/: scattering.tex
geometries/8inch/: 8inch_5disks_longer.cfg  8inch_5disks_longer2.cfg  8inch_5disks_longer2_Types.cfg  8inch_5disks_longer_Types.cfg  8inch_LongBarrel_5_20_a.cfg  8inch_LongBarrel_5_20_a_Types.cfg
geometries/BarrelEndcap/: 3xPS_3x2S.cfg  3xPS_3x2S_5disks_longer.cfg  3xPS_3x2S_5disks_longer_Types.cfg  3xPS_3x2S_Types.cfg  8inches_5disks_longer.cfg  8inches_5disks_longer_Types.cfg
geometries/CMS_Phase2/: .Baseline_flat_200.cfg  .Baseline_tilted.cfg  .Baseline_tilted_200.cfg  .Baseline_tilted_200_Pixel_1_1_1.cfg  .Baseline_tilted_200_Pixel_1_2_1.cfg  .Baseline_tilted_200_Pixel_1_4_1.cfg  .Baseline_tilted_200_Pixel_3_5_1.cfg  .Baseline_tilted_200_Pixel_4_0_0.cfg  .Baseline_tilted_200_Pixel_4_0_2.cfg  .Baseline_tilted_200_Pixel_4_1_0.cfg  .Baseline_tilted_autoPlacement.cfg  .OT_Tilted_FullTEDD_362_200_Pixel_4021.cfg  Baseline_flat.cfg  Baseline_flat_200.cfg  Baseline_tilted.cfg  Baseline_tilted_200.cfg  Baseline_tilted_200_Pixel_1_1_2.cfg  Baseline_tilted_200_Pixel_1_3_1.cfg  Baseline_tilted_200_Pixel_1_5_1.cfg  Baseline_tilted_200_Pixel_1_5_2.cfg  Baseline_tilted_200_Pixel_2_4_1.cfg  Baseline_tilted_200_Pixel_3_4_1.cfg  Baseline_tilted_200_Pixel_3_5_1.cfg  Baseline_tilted_200_Pixel_4_0_0.cfg  Baseline_tilted_200_Pixel_4_0_1.cfg  Baseline_tilted_200_Pixel_4_0_2_1.cfg  Baseline_tilted_200_Pixel_4_0_3.cfg  Baseline_tilted_200_Pixel_4_1_0.cfg  Baseline_tilted_200_Pixel_4_4_1.cfg  FlatTracker4026.cfg  OT362_200_IT4121.cfg  OT3651_200_IT4026.cfg  OT3652_200_IT4026.cfg  OT365_200_IT4022.cfg  OT365_200_IT4024.cfg  OT365_200_IT4025.cfg  OT365_200_IT4026.cfg  OT365_200_IT500.cfg  OT366_200_IT4025.cfg  OT367_200_IT4025.cfg  (+109 more)
geometries/LongBarrel/: LongBarrel_4_15.cfg  LongBarrel_4_15_PS.cfg  (+12 more)
gui/: Makefile  maindialog.ui  maindialog.ui.h  resultspopup.ui.h  tkgeomgui.cpp  tkgeomgui.pro
inacsurf/: Makefile  demo.cpp
include/: .__afsC28D  AnalysisManager.h  Analyzer.h  Analyzer.hh  AnalyzerGeometry.h  AnalyzerHelpers.h  AnalyzerHelpers.hh  AnalyzerModule.h  AnalyzerOccupancy.h  AnalyzerResolution.h  AnalyzerTools.hh  AnalyzerVisitor.h  AnalyzerVisitor.hh  BFieldMap.h  Bag.h  Bag.hh  Barrel.h  Barrel.hh  ContourPoint.h  ContourPoint.hh  ConversionStation.h  ConversionStation.hh  CoordinateOperations.h  CoordinateOperations.hh  CsvTextBuilder.h  Decorator.h  Decorator.hh  DetIdBuilder.hh  Detector.hh  DetectorModule.h  DetectorModule.hh  Disk.h  Disk.hh  Endcap.h  Endcap.hh  Extractor.h  Extractor.hh  GeometricModule.h  GeometricModule.hh  GeometryFactory.h  (+138 more)
include_old/: HoughTrack.h  MaterialSection.h  ModuleType.h
materialDescription/: Materials.cpp  buildMaterials.sh  removeComments.pl
obsolete/: HoughTrack.h  tunePtParam.cpp
old/: CompareMaterials.sh  Makefile  tkmaterial.cpp
res/: Readme.txt
source/: delphize.cc  setup.cc  tklayout.cc  tklayout.cpp
src/: #Layer.cpp#  .#Layer.cpp  .__afsA3D3  AnalysisManager.cc  Analyzer.cc  Analyzer.cpp  AnalyzerGeometry.cc  AnalyzerModule.cpp  AnalyzerOccupancy.cc  AnalyzerResolution.cc  AnalyzerTools.cc  AnalyzerVisitor.cc  AnalyzerVisitor.cpp  BFieldMap.cpp  Bag.cc  Bag.cpp  Barrel.cc  Barrel.cpp  ConversionStation.cc  ConversionStation.cpp  CoordinateOperations.cc  CoordinateOperations.cpp  CsvTextBuilder.cc  DetIdBuilder.cc  DetectorModule.cc  DetectorModule.cpp  Disk.cc  Disk.cpp  Endcap.cc  Endcap.cpp  Extractor.cc  GeometricModule.cc  GeometricModule.cpp  GeometryManager.cc  GraphVizCreator.cc  GraphVizCreator.cpp  Histo.cc  Histo.cpp  Hit.cc  Hit.cpp  (+107 more)
style/: default.css  functions.js
test/: .gitignore  TrackerGeom.cc  rootwebTest.cc  rootwebTest.cpp  testGraphVizCreator.cc  testMakeUnique.cpp  testObjects.cc  testRevision.cpp
tkmaterial/: Makefile  demo.cpp  do_tracker.sh  tkmaterial.cpp  xmltest.cpp
xml/: geometry_cfg.py  longbarrel_cmsIdealGeometryXML_cff.py  newTrackerRecoMaterial.xml  newTrackerStructureTopology.xml  pixbar.xml  pixbarWithMidpointMarkers.xml  pixelProdCuts.xml  pixelsens.xml  pixfwd.xml  trackerProdCuts.xml  trackerRecoMaterial.xml  trackerStructureTopology.xml  trackerVolumeTemplate.xml  trackersens.xml
(+2030 files in other folders)
